packages/backends/backend.h

/* ---------- Native Optimizer ---------- */

typedef void* OptimizerHandle;
/* ---------- Serialization (SafeTensors) ---------- */

/* Save all registered params to a .safetensors file. Returns 0 on success. */
int param_save(const char* path);
/* Load params from a .safetensors file into the existing param registry.
   Matches by name. Skips tensors not in registry. Returns 0 on success.
   Strict mode: errors out if any tensor's on-disk dtype differs from
   the destination param's dtype. Use param_load_with_policy() to opt
   in to silent precision conversion. */
int param_load(const char* path);
/* Load params with explicit dtype-mismatch policy. allow_cast=0 is
   strict (mismatch -> error). allow_cast=1 reads source bytes,
   widens to doubles, then loads via param_load_data (which narrows
   to the destination param's actual dtype as needed). Returns 0 if
   every tensor loaded cleanly, nonzero if any entry was skipped. */
int param_load_with_policy(const char* path, int allow_cast);
/* Save optimizer state to a .safetensors file. Returns 0 on success. */
int optimizer_save(OptimizerHandle opt, const char* path);
/* Load optimizer state from a .safetensors file. Returns 0 on success. */
int optimizer_load(OptimizerHandle opt, const char* path);